# ShuxinFortune

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  cloud-init.example.yaml  compose-prod.yaml  compose.yaml
.github/workflows/: cicd.yml
backend/: Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/lottery/: admin.py  models.py  tests.py  urls.py  views.py
backend/lottery/migrations/: 0001_initial.py  0002_alter_fortune_message.py
backend/lottery/templates/admin/lottery/fortune/: bulk_import.html  change_list.html
docs/1-development/: quickstart.md  spec.md
docs/2.deployment/: gce-deployment.md
frontend/: .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.prod  index.html  nginx-prod.conf  nginx.conf  package-lock.json  package.json  styles.css
