[tool.poetry]
name = "shuxin-fortune"
version = "0.1.0"
description = "舒心好運籤 - 給正在努力的你"
authors = ["atwolin <tzuchien@nlplab.cc>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
gunicorn = "^23.0.0"
whitenoise = "^6.11.0"
django-cors-headers = "^4.9.0"
django-environ = "^0.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.13"
pre-commit = "^4.5.1"
pyright = "^1.1.408"
django-stubs = "^5.2.9"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
